--- a/src/style.css
+++ b/src/style.css
@@ -52,8 +52,9 @@ table {
 body {
   font-family: 'Rubik', sans-serif;
   text-align: center;
-  background-image: url(pepper-super-sm.jpg);
+  background-image: url('/src/images/pepper-super-sm.jpg');
   background-repeat: repeat;
+  box-sizing: border-box;
 }
 
 .navbar {
@@ -81,7 +82,7 @@ body {
 .logo {
   font-size: 3rem;
   font-weight: 700;
-  color: rgb(17, 17, 70);
+  color: rgb(34, 31, 50);
 }
 
 .nav-link {
@@ -91,11 +92,12 @@ body {
   text-decoration: none;
   margin: 0px 10px;
   padding: 0px 20px;
-  color: rgb(17, 17, 70);
+  color: rgb(34, 31, 50);
   font-weight: 600;
   font-size: 1.2rem;
   cursor: pointer;
   height: 100%;
+  border-radius: 5px 5px 0px 0px;
 }
 
 .nav-link-text {
@@ -110,7 +112,7 @@ body {
 .active {
   border-bottom: rgb(145, 27, 27) 5px solid;
   color: rgb(145, 27, 27);
-  background-color: rgb(17, 17, 70);
+  background-color: rgb(34, 31, 50);
 }
 
 .main {
@@ -121,20 +123,20 @@ body {
   margin: 0px auto;
   padding-top: 20px;
   background-color: blanchedalmond;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 h1 {
   font-size: 5rem;
   font-weight: 700;
-  color: rgb(17, 17, 70);
+  color: rgb(34, 31, 50);
   margin-bottom: 40px;
 }
 
 h2 {
   font-size: 3rem;
   font-weight: 700;
-  color: rgb(17, 17, 70);
+  color: rgb(34, 31, 50);
   margin-bottom: 20px;
 }
 
@@ -145,21 +147,35 @@ h2 {
 .dish-title {
   font-size: 1.5rem;
   font-weight: 500;
-  color: rgb(17, 17, 70);
+  color: rgb(34, 31, 50);
   margin-bottom: 20px;
 }
 
 .dish-cost {
   font-size: 1.2rem;
   font-weight: 400;
-  color: rgb(17, 17, 70);
+  color: rgb(34, 31, 50);
 }
 
 p {
   font-size: 1.2rem;
   font-weight: 400;
-  color: rgb(17, 17, 70);
+  color: rgb(34, 31, 50);
   text-align: left;
   line-height: 2rem;
   margin: 20px;
+}
+
+img {
+  width: 500px;
+  height: auto;
+  border: 4px rgb(34, 31, 50) solid;
+}
+
+li {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: rgb(34, 31, 50);
+  line-height: 2rem;
+  margin: 10px;
 }
